# weather_project

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: OpenWeather.py  main.py  store_data.py
src/bronze/: read_data.py
src/landing/: read_data.py  store_data.py
test/: misc.ipynb
